--- a/alembic.ini
+++ b/alembic.ini
@@ -6,15 +6,15 @@
 # Diretório onde ficam as migrations
 script_location = alembic
 # Subpasta com as versões
-version_locations = %(here)s/versions
+version_locations = %(here)s/alembic/versions
 
 # URL do banco via variável de ambiente
 # IMPORTANTE: use driver assíncrono (asyncpg) na sua env
-# Exemplo no .env:  DATABASE_URL=postgresql+asyncpg://user:pass@host:5432/dbname
+# Exemplo no .env:
+# DATABASE_URL=postgresql+asyncpg://user:pass@host:5432/dbname
 sqlalchemy.url = ${DATABASE_URL}
 
-# Define o modo de execução assíncrona
-# Alembic vai usar asyncio + asyncpg
+# Ativa execução assíncrona (env.py deve usar asyncio + asyncpg)
 sqlalchemy.asyncio = true
 
 # =========================================
