--- a/requirements.txt
+++ b/requirements.txt
@@ -8,11 +8,12 @@ yarl==1.9.2
 async-timeout==4.0.2
 
 # =============================
-# Banco de dados
+# Banco de dados (sync + async)
 # =============================
-SQLAlchemy==2.0.21
+SQLAlchemy[asyncio]==2.0.21
 psycopg2-binary==2.9.9
-alembic==1.12.0
+asyncpg==0.29.0
+alembic==1.13.1
 
 # =============================
 # Cache / Filas / Redis
@@ -24,12 +25,13 @@ redis==5.1.0
 # =============================
 requests==2.31.0
 python-dotenv==1.0.1
+httpx==0.27.0   # Melhor suporte para requests assíncronas
 
 # =============================
 # Web server / Worker
 # =============================
 gunicorn==23.0.0
-uvicorn==0.23.2
+uvicorn[standard]==0.23.2
 fastapi==0.101.1
 
 # =============================
@@ -42,6 +44,11 @@ python-jose==3.3.0
 # Observabilidade / Métricas
 # =============================
 prometheus-client==0.17.1
+
+# =============================
+# Logs / Debug
+# =============================
+structlog==24.1.0
 
 # =============================
 # Extras / Typing
