--- a/requirements.txt
+++ b/requirements.txt
@@ -2,55 +2,55 @@
 # Bot Telegram & Async
 # =============================
 aiogram==2.25.1
-aiohttp==3.8.5
+aiohttp==3.9.5          # versão estável mais recente
 multidict==6.0.4
 yarl==1.9.2
-async-timeout==4.0.2
+async-timeout==4.0.3    # corrigida para última release compatível
 
 # =============================
 # Banco de dados (sync + async)
 # =============================
-SQLAlchemy[asyncio]==2.0.21
-psycopg2-binary==2.9.9
-asyncpg==0.29.0
-alembic==1.13.1
+SQLAlchemy[asyncio]==2.0.31   # última release estável (com asyncio nativo)
+psycopg2-binary==2.9.9        # suporte sync (usado em db.py e testes locais)
+asyncpg==0.29.0               # driver async obrigatório
+alembic==1.13.1               # migrations atualizado e compatível com SQLAlchemy 2.x
 
 # =============================
 # Cache / Filas / Redis
 # =============================
-redis==5.1.0
+redis==5.1.1   # última versão estável (corrige bugs importantes)
 
 # =============================
 # HTTP / Requests / APIs
 # =============================
-requests==2.31.0
+requests==2.32.3     # última versão
 python-dotenv==1.0.1
-httpx==0.27.0   # Melhor suporte para requests assíncronas
+httpx==0.27.0        # suporte total para requests assíncronas
 
 # =============================
 # Web server / Worker
 # =============================
 gunicorn==23.0.0
-uvicorn[standard]==0.23.2
-fastapi==0.101.1
+uvicorn[standard]==0.30.6     # corrigido para última versão estável
+fastapi==0.111.0              # última versão estável (sem breaking changes)
 
 # =============================
 # Segurança / Criptografia
 # =============================
-cryptography==41.0.3
+cryptography==43.0.1   # versão estável e mais segura
 python-jose==3.3.0
 
 # =============================
 # Observabilidade / Métricas
 # =============================
-prometheus-client==0.17.1
+prometheus-client==0.20.0   # última release estável
 
 # =============================
 # Logs / Debug
 # =============================
-structlog==24.1.0
+structlog==24.4.0   # versão 2024, mais atual
 
 # =============================
 # Extras / Typing
 # =============================
-typing-extensions==4.7.1
+typing-extensions==4.12.2   # atualizado
