--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@
 # Bot Telegram & Async
 # =============================
 aiogram==2.25.1
-aiohttp==3.9.5          # versão estável mais recente
+aiohttp==3.8.6          # última versão compatível com aiogram 2.25.1
 multidict==6.0.4
 yarl==1.9.2
 async-timeout==4.0.3    # corrigida para última release compatível
